# src/backend.go
@@ -1,47 +1,60 @@
 package httpserver
 
 import (
+	"RestGoTest/docs"
 	"RestGoTest/src/config"
+	"RestGoTest/src/pkg/logging"
 	"RestGoTest/src/router"
+	"fmt"
 
 	"RestGoTest/src/middleware"
-
-	"log"
-	"net/http"
 
 	_ "RestGoTest/docs"
 
 	"github.com/gin-gonic/gin"
-	"github.com/gorilla/mux"
-	httpSwagger "github.com/swaggo/http-swagger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-type App struct {
-	Port   string
-	Router *mux.Router
-}
+var logger = logging.NewLogger(config.GetConfig())
 
-func (a *App) Init(cfg *config.Config) {
-	a.Router = mux.NewRouter()
-
-	a.InitializeGinService(cfg)
-}
-
-func (a *App) InitializeGinService(cfg *config.Config) {
+func InitServer(cfg *config.Config) {
+	gin.SetMode(cfg.Server.RunMode)
 	r := gin.New()
+
 	r.Use(middleware.DefaultStructuredLogger(cfg))
-	r.Use(middleware.LimitByRequest())
-	r.Use(gin.Logger(), gin.Recovery())
-	v1 := r.Group("/api/v1/")
-	{
-		health := v1.Group("/health")
-		router.Health(health)
+	r.Use(middleware.Cors(cfg))
+	r.Use(gin.Logger(), middleware.LimitByRequest())
+
+	RegisterRoutes(r, cfg)
+	RegisterSwagger(r, cfg)
+	logger := logging.NewLogger(cfg)
+	logger.Info(logging.General, logging.Startup, "Started", nil)
+	err := r.Run(fmt.Sprintf(":%s", cfg.Server.InternalPort))
+	if err != nil {
+		logger.Fatal(logging.General, logging.Startup, err.Error(), nil)
 	}
-	r.GET("/swagger/*any", gin.WrapH(httpSwagger.WrapHandler))
-	a.Router.PathPrefix("/api/v1/").Handler(r)
 }
 
-func (a *App) Run() {
+func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 
-	log.Fatal(http.ListenAndServe(a.Port, a.Router))
+	v1 := r.Group("/v1")
+	{
+		// User
+		users := v1.Group("/users")
+		router.User(users, cfg)
+
+	}
+
+}
+
+func RegisterSwagger(r *gin.Engine, cfg *config.Config) {
+	docs.SwaggerInfo.Title = "golang web api"
+	docs.SwaggerInfo.Description = "golang web api"
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.BasePath = "/"
+	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%s", cfg.Server.ExternalPort)
+	docs.SwaggerInfo.Schemes = []string{"http"}
+
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
