# src/dto/otpRequest.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetOtpRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required"`
+}
