# src/router/router.go
@@ -1,12 +1,0 @@
-package router
-
-import (
-	"RestGoTest/src/handler"
-
-	"github.com/gin-gonic/gin"
-)
-
-func Health(r *gin.RouterGroup) {
-	hand := handler.NewHealth()
-	r.GET("/health", hand.HealthTest)
-}
